# ImageToMapMC

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE.rtf  Product.wxs  README.md  build-all.bat  build-debug.bat  build-debug.sh  build.bat  build.sh  build32.bat  install-wx-widgets.sh  make-wix-installer.bat  make-wix.bat  native-tools-windows.bat  update-version.js  vcpkg.json  wix-64.wxs  ws.code-workspace
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
ImageToMapMC/: CMakeLists.txt  ImageToMapMC.cpp  ImageToMapMC.h
ImageToMapMC/colors/: cielab.h  colors.cpp  colors.h
ImageToMapMC/minecraft/: mc_blocks.cpp  mc_blocks.h  mc_colors.cpp  mc_colors.h  mc_common.h
guides/: basic_guide.md  export_as_maps.md  export_as_structures.md
script-templates/: Product.wxs  build.sh  make-wix-installer.bat
src/: CMakeLists.txt  ImageToMapMC.cpp  main_console.cpp  main_console.h  main_win.cpp  main_win.h  version.h
src/colors/: cielab.cpp  cielab.h  colors.cpp  colors.h
src/mapart/: common.cpp  common.h  dithering.h  map_art.cpp  map_art.h  map_build.cpp  map_build.h  map_color_set.cpp  map_color_set.h  map_generate.cpp  map_generate.h  map_image.cpp  map_image.h  map_nbt.cpp  map_nbt.h  materials.cpp  materials.h  project.cpp  project.h
src/minecraft/: mc_blocks.cpp  mc_blocks.h  mc_colors.cpp  mc_colors.h  mc_common.cpp  mc_common.h  mcfunction.cpp  mcfunction.h  schematic.cpp  schematic.h  structure.cpp  structure.h
src/minecraft/world/: chunk.cpp  chunk.h  region.cpp  region.h  tools.cpp  tools.h  world.cpp  world.h
src/resources/: icon.xpm
src/threads/: progress.cpp  progress.h
src/tools/: basedir.cpp  basedir.h  byte_stream.cpp  folder_remember.cpp  folder_remember.h  fs.h  image_edit.cpp  image_edit.h  open_desktop.cpp  open_desktop.h  text_file.cpp  text_file.h  value_remember.cpp  value_remember.h
src/wx/: image_edit_dialog.cpp  image_edit_dialog.h  image_resize_dialog.cpp  image_resize_dialog.h  img_display_window.cpp  img_display_window.h  main_window.cpp  main_window.h  map_export_dialog.cpp  map_export_dialog.h  materials_window.cpp  materials_window.h  structure_export_dialog.cpp  structure_export_dialog.h  support_block_options_dialog.cpp  support_block_options_dialog.h  worker_thread.cpp  worker_thread.h
wix/: LICENSE.rtf  Product.wxs  configure.ps1  make-wix-installer.bat
~/.ImageToMapMC/: folder-exp-struct
